<resources>
    <string name="app_name">12</string>
    <string name="radius_label">Radius:</string>
    <string name="radius_hint">e.g., 2</string>
    <string name="area_label">Circular area:</string>
    <string name="button_calculate">CALCULATE</string>
    <string name="button_clear">CLEAR</string>
    <string name="image">Area calculator illustration</string>
    <string name="empty_input_warning">Please enter a radius</string>
    <string name="invalid_radius_warning">Enter a valid non-negative radius</string>
</resources>
